Project

General

Profile

Actions

Bug #38500

closed

[librbd] race condition possible when validating RBD pool

Added by Jason Dillaman about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The create image state machine attempts to validate the pool for snapshot and overwrite support. However, if multiple images are being created concurrently, this can result in a race condition where the contents of the "rbd_info" object keeps switching between "validate" and "overwrite validated". The pool should be validated at initialization time to help avoid this issue and the initial write should be guarded to ensure the object doesn't exist.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #38563: mimic: [librbd] race condition possible when validating RBD poolResolvedJason DillamanActions
Copied to rbd - Backport #38564: luminous: [librbd] race condition possible when validating RBD poolResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman about 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 26683
Actions #2

Updated by Mykola Golub about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38563: mimic: [librbd] race condition possible when validating RBD pool added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38564: luminous: [librbd] race condition possible when validating RBD pool added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF